# lpl

./: .gitignore  CMakeLists.txt  MANUAL.md  README.md  build.bash  test.lpl  todo
editors/lpl-lsp/: package-lock.json  package.json
editors/lpl-lsp/src/: server.ts
editors/vscode/lpl-lang/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/lpl-lang/lsp/: package-lock.json
editors/vscode/lpl-lang/src/: extension.ts
editors/vscode/lpl-lang/syntaxes/: lpl.tmLanguage.json
examples/: defer.lpl  hello.lpl  mutex.lpl  namespaces.lpl  read_by_line.lpl  test_abstract.lpl  test_argc_argv.lpl  test_array.lpl  test_auto.lpl  test_cast.lpl  test_cinc.lpl  test_cinc_full.lpl  test_cinc_simple.lpl  test_clink.lpl  test_clink2.lpl  test_collections.lpl  test_const.lpl  test_defaults.lpl  test_dowhile.lpl  test_exc_hierarchy.lpl  test_exceptions.lpl  test_foreach.lpl  test_generics.lpl  test_incdec.lpl  test_lambda.lpl  test_manual_puts.lpl  test_memory.lpl  test_operators.lpl  test_override.lpl  test_ptr.lpl  test_raii.lpl  test_range.lpl  test_squib.lpl  test_string_args.lpl  test_super.lpl  test_switch.lpl  test_ternary.lpl
runtime/: CMakeLists.txt  RUNTIME_C_GUIDE.md  lplrt.c  lplrt.h
runtime/modules/: cstr.c  cstr.h  lpl_collections.c  lpl_console.c  lpl_exception.c  lpl_files.c  lpl_math.c  lpl_memory.c  lpl_string.c  lpl_sync.c  lpl_system.c
src/: CMakeLists.txt  ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  resolver.cpp  resolver.h  sema.cpp  sema.h  token.h
stdlib/: collections.lph  console.lph  console.lpl  files.lph  files.lpl  math.lph  math.lpl  memory.lph  memory.lpl  string.lph  string.lpl  sync.lph  sync.lpl  system.lph  system.lpl
